src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>cfg_Group_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group ID 1</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Accounts (Group ID 1)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_Professional_Dev__c</fullName>
        <label>HS Specialist Professional Development</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_Space__c</fullName>
        <label>HS Specialist Space</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_Support_and_Supervisio__c</fullName>
        <label>HS Specialist Support and Supervision</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Employer__c</fullName>
        <label>HealthySteps Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education - Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than a bachelor’s degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor’s degree</fullName>
                </value>
                <value>
                    <fullName>Master’s degree</fullName>
                </value>
                <value>
                    <fullName>Doctoral degree</fullName>
                </value>
                <value>
                    <fullName>Professional degree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_How_Did_You_Hear__c</fullName>
        <label>How Did You Hear</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_How_Many_Children_Annually__c</fullName>
        <label>Estimated # Children 0-3 Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_INV_Private_Meeting_Space_Available__c</fullName>
        <formula>NOT( C4G_Private_Meeting_Space_Available__c )</formula>
        <label>INV Private Meeting Space Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Implementation_Plan_Sent__c</fullName>
        <label>Implementation Plan Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cfg_Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Initial_Site_Profile_Funding_Sources__c</fullName>
        <label>Initial Site Profile Funding Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tobacco settlement funds</fullName>
                </value>
                <value>
                    <fullName>Tobacco tax funds</fullName>
                </value>
                <value>
                    <fullName>Project LAUNCH (Linking Actions for Unmet Needs in Children’s Health)</fullName>
                </value>
                <value>
                    <fullName>GME/Residency training funds</fullName>
                </value>
                <value>
                    <fullName>Indian Health Service (IHS)</fullName>
                </value>
                <value>
                    <fullName>Health system, hospital or pediatric department funds (including health system reinvestment)</fullName>
                </value>
                <value>
                    <fullName>Philanthropic and foundation funding</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Department of Defense</fullName>
                </value>
                <value>
                    <fullName>Other state funds</fullName>
                </value>
                <value>
                    <fullName>Other federal funds</fullName>
                </value>
                <value>
                    <fullName>Other non-state/federal funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Integrated_Behavioral_Health_Comment__c</fullName>
        <label>Integrated Behavioral Health Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Integrated_Behavioral_Health_NO__c</fullName>
        <label>Integrated Behavioral Health NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Integrated_Behavioral_Health__c</fullName>
        <label>Site Has Integrated Behavioral Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Implemented to some degree</fullName>
                </value>
                <value>
                    <fullName>Fully implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Form_Merge__c</fullName>
        <formula>"&amp;Id=" + Id +
"&amp;QueryId=[PrimaryContact]a0uf400000FE1nA" +
"&amp;TemplateId=a12f4000005wZ1e" +
"&amp;DefaultPDF=1" +
"&amp;SC0=1" +
"&amp;SC1=Attachments" +
"&amp;DS7=13"</formula>
        <label>Interest Form Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Lead_Account_Type__c</fullName>
        <label>Lead Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Mail_Code__c</fullName>
        <label>Mail Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Mail</fullName>
                </value>
                <value>
                    <fullName>No Mail</fullName>
                </value>
                <value>
                    <fullName>No Address</fullName>
                </value>
                <value>
                    <fullName>No Soliciting</fullName>
                </value>
                <value>
                    <fullName>Next Year Appeal</fullName>
                </value>
                <value>
                    <fullName>Next Appeal</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Maternal_Depression_Comments__c</fullName>
        <label>Maternal Depression Screening Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Maternal_Depression_NO_Comment__c</fullName>
        <label>Maternal Depression Screening NO Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Maternal_Depression_Screeing_Status__c</fullName>
        <label>Maternal Depression Screeing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Mental_Health_Services_Comments__c</fullName>
        <label>Mental Health Services Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Mental_Health_Services_NO_Comments__c</fullName>
        <label>Mental Health Services NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Merge_Implementation_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Implementation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Merge_Initial_Site_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Initial Site Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Merge_Interest_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Interest Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Merge_Practice_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Practice Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Merge_Site_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Site Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Monitor_Screening_Metric_NO_Comments__c</fullName>
        <label>Monitor Screening Metrics NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Monitor_Screening_Metrics_Comments__c</fullName>
        <label>Monitor Screening Metrics Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Monitor_Screening_Metrics_Status__c</fullName>
        <label>Monitor Screening Metrics Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Implemented to some degree</fullName>
                </value>
                <value>
                    <fullName>Fully implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Most_Recent_Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Number_of_People_Trained__c</fullName>
        <formula>TrainingAttended__r.C4G_Number_of_people_trained__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of People Trained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Number_of_Training_Days__c</fullName>
        <label>Number of Training Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Office_Space_Comments__c</fullName>
        <label>Office Space Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Office_Space_NO_Comments__c</fullName>
        <label>Office Space NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Office_Space_in_Pediatric_Suite__c</fullName>
        <label>Office Space in Pediatric Suite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In suite office space for HealthySteps has not been identified</fullName>
                </value>
                <value>
                    <fullName>In suite office space for HealthySteps has been identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_On_Site_Social_Work_Comments__c</fullName>
        <label>On-Site Social Work Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_On_Site_Social_Worker_NO_Comments__c</fullName>
        <label>On-Site Social Worker NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Onboarding_Date__c</fullName>
        <label>Onboarding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Ongoing_Team_Based_Well_Child_Visits__c</fullName>
        <label>Ongoing Team-Based Well-Child Visits</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Funder_Data_System__c</fullName>
        <label>Other Funder Data System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Information__c</fullName>
        <label>Other Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Practice_Setting_Specified__c</fullName>
        <label>Other Practice Setting Specified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_Comments__c</fullName>
        <label>Physician Champion Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_NO_Comments__c</fullName>
        <label>Physician Champion NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_Status__c</fullName>
        <label>Physician Champion Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Physician Champion identified</fullName>
                </value>
                <value>
                    <fullName>Identified Physician Champion</fullName>
                </value>
                <value>
                    <fullName>Physician Champion on board and engaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Physician Champion)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Plan_Actvity_Date__c</fullName>
        <label>Plan Actvity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Plan_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field gets populated with the first and last name of the person designated to be the Plan Lead on the Implementation Plan Form.</inlineHelpText>
        <label>Plan Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Plan Lead)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Plan_Review_Date__c</fullName>
        <label>Plan Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Draft</fullName>
                </value>
                <value>
                    <fullName>Interim Draft</fullName>
                </value>
                <value>
                    <fullName>Final Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Positive_Parenting_Delivery_Require__c</fullName>
        <label>Positive Parenting Delivery Requirements</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Positive_Parenting_Guidance_Info__c</fullName>
        <label>Positive Parenting Guidance &amp; Info</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Post_Partum_Depression_Screening__c</fullName>
        <label>Post-Partum Depression Screening</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Preventive_Visits_Delivery_Require__c</fullName>
        <label>Preventive Visits Delivery Requirements</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Primary_Contact_Job_Title__c</fullName>
        <formula>npe01__One2OneContact__r.Title</formula>
        <label>Primary Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Primary_Contact_Telephone_Number__c</fullName>
        <formula>npe01__One2OneContact__r.Phone</formula>
        <label>Primary Contact Telephone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Primary_Practice_Setting__c</fullName>
        <label>Primary Practice Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pediatric practice (private or group)</fullName>
                </value>
                <value>
                    <fullName>Medical school or university</fullName>
                </value>
                <value>
                    <fullName>Family medicine practice (private or group)</fullName>
                </value>
                <value>
                    <fullName>Academic medical center</fullName>
                </value>
                <value>
                    <fullName>Children’s hospital clinic</fullName>
                </value>
                <value>
                    <fullName>Community health clinic or center</fullName>
                </value>
                <value>
                    <fullName>Hospital-based clinic (not a children’s hospital)</fullName>
                </value>
                <value>
                    <fullName>Child health and development organization</fullName>
                </value>
                <value>
                    <fullName>Indian Health Service (IHS) or tribally-run healthcare facility</fullName>
                </value>
                <value>
                    <fullName>Department of Public Health clinic</fullName>
                </value>
                <value>
                    <fullName>Department of Defense hospital or clinic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Referral_Tracking_Comments__c</fullName>
        <label>Referral Tracking Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Referral_Tracking_NO_Comments__c</fullName>
        <label>Referral Tracking NO Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Referral_Tracking_Status__c</fullName>
        <label>Referral Tracking and Follow Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Reimbursement_Comments__c</fullName>
        <label>Reimbursement Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Reimbursement_NO_Comments__c</fullName>
        <label>Reimbursement NO Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Reimbursement_Status__c</fullName>
        <label>Reimbursement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Implemented to some degree</fullName>
                </value>
                <value>
                    <fullName>Fully implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Relationships_With_Community_Partner__c</fullName>
        <label>Relationships With Community Partners</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Implemented to some degree</fullName>
                </value>
                <value>
                    <fullName>Fully implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Resource_Directory_Creation__c</fullName>
        <label>Resource Directory Creation</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_S_E_Screening_NO_Comments__c</fullName>
        <label>Social Emotional Screening NO Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Screening_For_Family_Needs__c</fullName>
        <label>Screening For Family Needs</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Send_Interest_Thank_You__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Interest Thank You</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Service_Delivery_Requirements__c</fullName>
        <label>Service Delivery Requirements</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Site_Has_On_Site_Social_Worker__c</fullName>
        <label>Site Has On-Site Social Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Implemented to some degree</fullName>
                </value>
                <value>
                    <fullName>Fully implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Site_Profile_Completed__c</fullName>
        <label>Site Profile Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Social_Emotional_Behavioral_Screenin__c</fullName>
        <label>Social-Emotional &amp; Behavioral Screening</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Social_Emotional_Screening_Comments__c</fullName>
        <label>Social Emotional Screening Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Social_Emotional_Screening_Status__c</fullName>
        <label>Social Emotional Screening Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Staffing_Comments__c</fullName>
        <label>Staffing Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Staffing_NO_Comments__c</fullName>
        <label>Staffing NO Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Staffing_Status__c</fullName>
        <label>Staffing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Practice does not have an existing staff member identified for this position; need to recruit externally</fullName>
                </value>
                <value>
                    <fullName>Practice has successfully recruited a new staff member to fill HealthySteps Specialist position</fullName>
                </value>
                <value>
                    <fullName>Practice has an existing staff member identified for this purpose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Support_Services_Comments__c</fullName>
        <label>Support Services Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Support_Services_NO_Comments__c</fullName>
        <label>Support Services NO Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_System_Name__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Team_Based_Well_Child_Visit_Comments__c</fullName>
        <label>Team Based Well Child Visit Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Team_Based_Well_Child_Visit_Status__c</fullName>
        <label>Team Based Well Child Visit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Tier_2_Children_Served_Annually__c</fullName>
        <label>Tier 2 Children Served Annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Tier_3_Children_Served_Annually__c</fullName>
        <label>Tier 3 Children Served Annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Total_HealthySteps_Specialists__c</fullName>
        <label>HealthySteps Specialists Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Trainer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Trainer 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Trainer 1)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Trainer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Trainer 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Trainer 2)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Trainer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Trainer 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Trainer 3)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Well_Child_Visit_NO_Comments__c</fullName>
        <label>Team Based Well Child Visit NO Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>initial_reminder_email_to_send__c</fullName>
        <formula>( DateMostRecentSiteProfileSent__c )+ 14</formula>
        <label>initial reminder email to send</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_children_per_Specialist__c</fullName>
        <label># of children per Specialist</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>HealthySteps_Site_Details_and_Training</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>cfg_Group_ID__c</columns>
        <columns>C4G_Site_ID__c</columns>
        <columns>C4G_Status__c</columns>
        <columns>npe01__One2OneContact__c</columns>
        <columns>cfg_Primary_Contact_Job_Title__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>cfg_Children_0_3_Served_Annually__c</columns>
        <columns>DateMostRecentASRCompleted__c</columns>
        <columns>cfg_Tier_2_Children_Served_Annually__c</columns>
        <columns>cfg_Tier_3_Children_Served_Annually__c</columns>
        <columns>C4G_HealthySteps_Institute_Training_Date__c</columns>
        <columns>C4G_Implementation_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>HS Site</value>
        </filters>
        <filters>
            <field>C4G_Status__c</field>
            <operation>equals</operation>
            <value>Not interested</value>
        </filters>
        <label>HealthySteps Site Details and Training</label>
    </listViews>
    <listViews>
        <fullName>Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npo02__Formal_Greeting__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>npo02__Best_Gift_Year__c</columns>
        <columns>npo02__HouseholdPhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>Household Accounts</label>
        <sharedTo>
            <group>Non_HealthySteps_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews>
</CustomObject>